tests/should_pass/import_resource_chain_a.fit
import import_resource_chain_b

fn use_widget(w: move Widget) -> () {
    drop_widget(w)
}
