tests/should_fail/import_duplicate_name_a.fit
resource Connection { cleanup: close_conn_a }
fn close_conn_a(c: move Connection) -> ()
